--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
 }
 
 .App-logo {
@@ -14,7 +16,10 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+  text-shadow: 8px 8px 10px #0000008c;
+  background-color: #343a40;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -36,59 +41,315 @@
     transform: rotate(360deg);
   }
 }
+.dafTokens {
+  position: absolute;
+  top: 0;
+  margin-top: 11pc;
+  font-size: 60px;
+  color: white;
+}
 .inputPrice {
-  font-size: large;
-}
-.buyTokens {
-  background-color: red;
-  width: max-content;
-  padding: 10px 20px;
   font-size: larger;
-  color: white;
-  border: none;
+  position: absolute;
+  top: 0;
+  margin-top: 22pc;
 }
+.inputTokens {
+  position: absolute;
+  top: 0;
+  margin-top: 18pc;
+  font-size: 30px;
+  color: white;
+}
+
 .connect {
-  background-color: red;
+  min-width: 300px;
+  min-height: 60px;
+  font-family: "Nunito", sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #313133;
+  background: red;
+  background: linear-gradient(
+    90deg,
+    red(129, 230, 217, 1) 0%,
+    red(79, 209, 197, 1) 100%
+  );
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px red(79, 209, 197, 0.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+}
+
+.connect::before {
+  content: "";
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid white;
+  box-shadow: 0 0 60px rgba(0, 255, 203, 0.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.connect:hover,
+.connect:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+.connect:hover::before,
+.connect:focus::before {
+  opacity: 1;
+}
+
+.connect::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  border: 6px solid #00ffcb;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+.connect:hover::after,
+.connect:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
+}
+
+.connect {
+  padding-left: 1ch;
+  padding-right: 1ch;
   color: white;
-  font-size: larger;
+  font-size: 1.5ch;
   position: absolute;
   top: 0;
   right: 0;
-  padding: 10px 10px;
+
   margin-top: 2ch;
   margin-right: 2ch;
 }
-.welcome {
-  position: absolute;
-  top: 0;
-  font-size: 60px;
-}
+
 .connected {
   width: 30ch;
+  top: 0;
+  right: 0;
+  color: white;
+
+  margin-top: 2ch;
+  margin-right: 2ch;
+  font-size: 22px;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  position: relative;
+  z-index: 0;
+  border-radius: 30px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  font-style: italic;
+  font-family: "Times New Roman", Times, serif;
+  width: 25pc;
+
+  position: absolute;
+  border: 2px solid red;
+  padding-left: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 30px;
+  color: white;
 }
 .tokenListing {
   font-size: larger;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  font-style: italic;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  width: 25pc;
+  font-size: 29px;
   position: absolute;
   top: 0;
-  margin-top: 9ch;
+  margin-top: 1.5ch;
   left: 0;
   margin-left: 2ch;
   border: 2px solid red;
-  background-color: lightgray;
-  padding: 3px;
-  color: black;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  color: white;
 }
-.tokenPrice {
+
+.priceNumber {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 3pc;
+  position: absolute;
+  bottom: 0ch;
+  margin-bottom: 12ch;
+  left: 0;
+  margin-left: 0cm;
+  width: 15ch;
+
+  padding: 3px;
+  color: white;
+}
+.currentPrice {
+  font-size: 2pc;
+  position: absolute;
+  bottom: 0ch;
+  margin-bottom: 16ch;
+  left: 0;
+  margin-left: 4ch;
+  width: 15ch;
+
+  padding: 3px;
+  color: white;
+}
+.buyTokens {
   font-size: larger;
-  position: absolute;
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
   top: 0;
-  margin-top: 14ch;
+  margin-top: 12pc;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.buyTokens:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.buyTokens:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+.usdcBalance {
+  font-size: 2pc;
+  position: absolute;
+  bottom: 0ch;
+  margin-bottom: 5.5ch;
+  right: 0;
+  margin-right: 4ch;
+
+  padding: 3px;
+  color: white;
+}
+.tokensOwned {
+  font-size: 2pc;
+  position: absolute;
+  bottom: 0ch;
+  margin-bottom: 9ch;
+  left: 0;
+  margin-left: 28ch;
+
+  padding: 3px;
+  color: white;
+}
+
+.tokensLeft {
+  font-size: 2pc;
+  position: absolute;
+  bottom: 0ch;
+  margin-bottom: 5ch;
   left: 0;
   margin-left: 2ch;
-  border: 2px solid red;
-  background-color: lightgray;
+
   padding: 3px;
-  color: black;
-}
-.andromeda {
+  color: white;
 }
